--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "start": "nest start",
     "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
+    "producer": "ts-node src/main.ts",
+    "consumer": "ts-node src/main-consumer.ts",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -22,7 +24,7 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^11.1.5",
     "@nestjs/microservices": "^11.1.5",
     "@nestjs/platform-express": "^10.0.0",
     "kafkajs": "^2.2.4",
